# my-little-robot-project

./: Cargo.toml  README.md  sdkconfig.defaults
src/: main.rs
src/adapters/: audio_in_placeholder.rs  audio_out_placeholder.rs  mod.rs  motor_gpio.rs  oled_display.rs  serial_telemetry.rs  touch_gpio.rs
src/app/: events.rs  mod.rs  orchestrator.rs  state.rs
src/control_panel/: mod.rs  model.rs  panel.html  server.rs  web.rs
src/domain/: emotion.rs  fault.rs  mod.rs  robot_mode.rs
src/platform/: board.rs  pins.rs
src/ports/: audio_in.rs  audio_out.rs  display.rs  mod.rs  motion.rs  telemetry.rs  touch.rs
tools/control-panel/: Cargo.toml  README.md
tools/control-panel/src/: main.rs  model.rs  routes.rs  store.rs
tools/control-panel/src/transport/: mock.rs  mod.rs
tools/control-panel/static/: index.html
